# backup-at-scripts

./: .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
.github/: dependabot.yml
.github/workflows/: build-test.yml
lxcu/fedora/: install.list
lxcu/ubuntu/: install.list
misc/: TODO.txt
src/man/1/: Makefile.am  backup-at-scripts-launcher.sh.1.man.in  backup-at-scripts-location.sh.1.man.in
src/man/5/: Makefile.am  backup-at-scripts.5.man.in
src/prg/at-scripts/: Makefile.am  adhoc-backup-locked-shutdown.at.in  adhoc-backup-locked.at.in  adhoc-backup-shutdown.at.in  adhoc-backup.at.in  daily-backup-locked-shutdown.at.in  daily-backup-locked.at.in  daily-backup-shutdown.at.in  daily-backup.at.in  diff-backup-locked-shutdown.at.in  diff-backup-locked.at.in  diff-backup-shutdown.at.in  diff-backup.at.in  sel-backup-locked-shutdown.at.in  sel-backup-locked.at.in  sel-backup-shutdown.at.in  sel-backup.at.in  sel-daily-backup-locked-shutdown.at.in  sel-daily-backup-locked.at.in  sel-daily-backup-shutdown.at.in  sel-daily-backup.at.in  sel-diff-backup-locked-shutdown.at.in  sel-diff-backup-locked.at.in  sel-diff-backup-shutdown.at.in  sel-diff-backup.at.in  sel-weekly-backup-locked-shutdown.at.in  sel-weekly-backup-locked.at.in  sel-weekly-backup-shutdown.at.in  sel-weekly-backup.at.in  shutdown.at.in  weekly-backup-locked-shutdown.at.in  weekly-backup-locked.at.in  weekly-backup-shutdown.at.in  weekly-backup.at.in
src/prg/bash/: Makefile.am  backup-at-scripts-launcher.sh.in  backup-at-scripts-location.sh.in
